--- a/src/main/resources/templates/users/users.html
+++ b/src/main/resources/templates/users/users.html
@@ -31,7 +31,7 @@
                     <tr th:each="user,iterStat : ${users}">
                       <td><a th:href="@{/users/{id}(id=${user.id})}"><span th:text="${iterStat.count}">1</span></a></td>
                       <td th:text="${user.name}">Name</td>
-                      <td th:text="${user.email}">Email</td>
+                      <td th:text="${user.username}">Email</td>
                       <td><a th:href="@{/users/{id}(id=${user.id})}" class="btn btn-sm btn-default"><i class="fa fa-edit"></i> Edit</a></td>
                     </tr>
                     
