--- a/src/main/resources/templates/clients/clients.html
+++ b/src/main/resources/templates/clients/clients.html
@@ -4,7 +4,7 @@
       layout:decorator="layout/mainLayout">
       
     <head>
-        <title>Orders</title>
+        <title>Clients</title>
     </head>
     <body>
     	        
@@ -13,11 +13,11 @@
             <div class="col-md-12">
               <div class="box">
                 <div class="box-header">
-                  <h3 class="box-title">List of Sources</h3>
+                  <h3 class="box-title">Clients</h3>
                   
                   <div class="box-tools">
                     <div class="input-group" style="width: 150px;">
-                    	<a class="btn btn-sm btn-default" th:href="@{/clients/new}"><i class="fa fa-plus-circle"></i> New Client</a>
+                    	<a sec:authorize="@permissionSecurityService.hasPrivilege('CLIENT_CREATE')" class="btn btn-sm btn-default" th:href="@{/clients/new}"><i class="fa fa-plus-circle"></i> New Client</a>
                     </div>
                   </div>
                   
@@ -29,20 +29,26 @@
                    <table id="example" class="display" style="width:100%">
         			<thead>
             		<tr>
-            	     <th>Client Id</th>
+            	     <!-- <th>Client Id</th> -->
                      <th>Client Name</th>
                      <th>Client Description</th>
-                     <th>Client Type</th>
+                     <!-- <th>Client Type</th> -->
                      <th>Actions </th>
             		</tr>
         </thead>
         <tbody>
              	      <tr th:each="source,iterStat : ${sourceList}">
-                      <td th:text="${source.udClientId}"></td>
+                      <!-- <td th:text="${source.udClientId}"></td> -->
                       <td th:text="${source.udClientName}"></td>
                       <td th:text="${source.udClientDescription}"></td>
-                       <td th:text='${source.udClientType == 1 ? "Money Taker": source.udClientType == 2 ? "Money Giver": "Both"}'></td>
-                      <td></td>
+                      <!--   <td th:text='${source.udClientType == 1 ? "Money Taker": source.udClientType == 2 ? "Money Giver": "Both"}'></td> -->
+                        <td>
+               <!--  <a href="javascript:void(0)"><i class="fas fa-edit"></i></a>&nbsp;&nbsp;
+                <a href="javascript:void(0)" data-toggle="modal" data-target="#myModal" ><i class="fas fa-trash"></i></a>&nbsp;&nbsp; -->
+                <a sec:authorize="@permissionSecurityService.hasPrivilege('CLIENT_UPDATE')" href="javascript:void(0)" onclick='showTransactionData(this)' data-toggle="modal" data-target="#myModal" ><i class="fa fa-external-link-square"></i></a>
+                
+                </td>
+            
 			</tr>
             
 
@@ -51,10 +57,10 @@
         </tbody>
         <tfoot>
             <tr>
-            	 	 <th>Client Id</th>
+            	 	<!--  <th>Client Id</th> -->
                      <th>Client Name</th>
                      <th>Client Description</th>
-                     <th>Client Type</th>
+                    <!--  <th>Client Type</th> -->
                      <th>Actions </th>
             
             </tr>
