--- a/src/main/resources/templates/credit_management/create_credit_transaction.html
+++ b/src/main/resources/templates/credit_management/create_credit_transaction.html
@@ -9,7 +9,7 @@
     <body>
         
     	<div layout:fragment="content">
-	        
+	        <a class="btn btn-sm btn-default" th:href="@{/credit_management}"><i class="fa fa-plus-circle"></i> Credit Reports</a>
               <div class="box box-warning">
                 <div class="box-header with-border">
                   <h3 class="box-title">Create New Credit Transaction</h3>
@@ -29,7 +29,8 @@
                    
                    <div class="form-group" th:classappend="${#fields.hasErrors('crTransactionMoneyGiver')}? 'has-error'">
                       <label>Select Customer</label>
-                      <select  class="form-control" name="crTransactionMoneyGiver" th:field="*{crTransactionMoneyGiver}" placeholder="Select Source" th:required="required">
+                      <select th:oninvalid="this.setCustomValidity('Select Customer.')" th:onchange="this.setCustomValidity('')"  class="form-control js-example-basic-single" name="crTransactionMoneyGiver" th:field="*{crTransactionMoneyGiver}"  th:required="required">
+							<option th:value th:text></option>
 							<option th:each="client : ${udClientList}"
                 				th:value="${client.udClientId}"
                 				th:text="${client.udClientName}"></option>
@@ -41,13 +42,12 @@
               
               		 <div class="form-group" th:classappend="${#fields.hasErrors('crTransactionAmount')}? 'has-error'">
                       <label>Transaction Amount</label>
-                      <input type="number" class="form-control" name="crTransactionAmount" th:field="*{crTransactionAmount}" placeholder="Enter Transaction Amount" th:required="required" />
+                      <input min="1" type="number" class="form-control" name="crTransactionAmount" th:field="*{crTransactionAmount}" placeholder="Enter Transaction Amount" th:required="required" />
                       <p th:if="${#fields.hasErrors('crTransactionAmount')}" th:errors="crTransactionAmount" th:class="text-red">Incorrect data</p>
                     </div>
                    
                    
-                   
-                                       <div class="form-group" th:classappend="${#fields.hasErrors('crTransacionSourceId')}? 'has-error'">
+                   <!-- <div class="form-group" th:classappend="${#fields.hasErrors('crTransacionSourceId')}? 'has-error'">
                       <label>Select Source</label>
                       <select  class="form-control" name="crTransacionSourceId" th:field="*{crTransacionSourceId}" onchange="selectSource(this)" placeholder="Select Source" th:required="required">
 
@@ -58,7 +58,7 @@
                    
                    </select>
                       <p th:if="${#fields.hasErrors('crTransacionSourceId')}" th:errors="crTransacionSourceId" th:class="text-red">Incorrect data</p>
-                    </div>
+                    </div> -->
                     
                     <input type="hidden" name="crTransactionSourceName" id="sourceName"/>
                    
@@ -68,14 +68,14 @@
                       <p th:if="${#fields.hasErrors('crTransactionMoneyTaker')}" th:errors="crTransactionMoneyTaker" th:class="text-red">Incorrect data</p>
                     </div> -->
                     
-                    <div class="form-group" th:classappend="${#fields.hasErrors('crTransactionPaymentMode')}? 'has-error'">
+                    <!-- <div class="form-group" th:classappend="${#fields.hasErrors('crTransactionPaymentMode')}? 'has-error'">
                       <label>Payment Mode</label>
                       <select  class="form-control" name="crTransactionPaymentMode" th:field="*{crTransactionPaymentMode}" placeholder="Enter Name Of Money Taker" th:required="required">
                       <option value="cash"> Cash </option>
                       <option value="cheque"> Cheque </option>
                        </select>
                       <p th:if="${#fields.hasErrors('crTransactionPaymentMode')}" th:errors="crTransactionPaymentMode" th:class="text-red">Incorrect data</p>
-                    </div>
+                    </div> -->
                    
                    
                     
@@ -87,11 +87,11 @@
                     
                     
 
-                     <div class="form-group" th:classappend="${#fields.hasErrors('crTransactionDescription')}? 'has-error'">
+                     <!-- <div class="form-group" th:classappend="${#fields.hasErrors('crTransactionDescription')}? 'has-error'">
                       <label>Transaction Description </label>
                       <textarea class="form-control" name="crTransactionDescription" th:field="*{crTransactionDescription}" placeholder="Enter Transaction Description..." > </textarea>
                       <p th:if="${#fields.hasErrors('crTransactionDescription')}" th:errors="crTransactionDescription" th:class="text-red">Incorrect data</p>
-                    </div>
+                    </div> -->
          <!--            
                     <div class="form-group" th:classappend="${#fields.hasErrors('name')}? 'has-error'">
                       <label>Name</label>
