--- a/src/main/resources/templates/debit_management/debit_management.html
+++ b/src/main/resources/templates/debit_management/debit_management.html
@@ -4,8 +4,7 @@
       layout:decorator="layout/mainLayout">
       
       <head>
-     
-        <title>Categories</title>
+        <title>Debit Report</title>
     </head>
     <body>
         
@@ -14,7 +13,7 @@
             <div class="col-md-12">
               <div class="box">
                 <div class="box-header">
-                  <h3 class="box-title">List of Categories</h3>
+                  <h3 class="box-title">Debit Report</h3>
                   <div class="box-tools">
                    <!--  <div class="input-group" style="width: 150px;">
                     	<a class="btn btn-sm btn-default" th:href="@{/debit_management/new}"><i class="fa fa-plus-circle"></i> New Debit Transaction</a>
@@ -44,33 +43,44 @@
      <table id="example" class="display" style="width:100%">
         <thead>
             <tr>
-            	<th>Debit Voucher Id</th>
-                <th>Money Giver</th>
+            	<!-- <th>Debit Voucher Id</th> -->
+                <th>Customer</th>
 <!--                 <th>Money Taker</th>
- -->                <th>Given Amount</th>
+ -->            <th>Amount</th>
                 <th>Transaction Date</th>
-                <th>Source</th>
+                <th>Actions</th>
+                <!-- <th>Source</th> -->
             </tr>
         </thead>
         <tbody>
              <tr th:each="deb,iterStat : ${debitList}">
-             	<td th:text="${deb.debTransactionId}"></td>
+             	<!-- <td th:text="${deb.debTransactionId}"></td> -->
                 <td th:text="${deb.debTransactionMoneyGiver}"></td>
 <!--                 <td th:text="${deb.debTransactionMoneyTaker}"></td>
  -->                <td th:text="${deb.debTransactionAmount}"></td>
                 <td th:text="${deb.debTransactionDate}"></td>
-                <td th:text="${deb.debTransactionSourceName}"></td>
+               <!--  <td th:text="${deb.debTransactionSourceName}"></td> -->
+               
+               <td>
+                
+               <!--  <a href="javascript:void(0)"><i class="fas fa-edit"></i></a>&nbsp;&nbsp;
+                <a href="javascript:void(0)" data-toggle="modal" data-target="#myModal" ><i class="fas fa-trash"></i></a>&nbsp;&nbsp; -->
+                <a sec:authorize="@permissionSecurityService.hasPrivilege('DEBIT_UPDATE')" href="javascript:void(0)" onclick='showTransactionData(this)' data-toggle="modal" data-target="#myModal" ><i class="fa fa-external-link-square"></i></a>
+                
+                </td>
+               
             </tr>
             
         </tbody>
         <tfoot>
             <tr>
-            	<th>Debit Voucher Id</th>
-            	<th>Money Giver</th>
+            	<!-- <th>Debit Voucher Id</th> -->
+            	<th>Customer</th>
                 <!-- <th>Money Taker</th> -->
-                <th>Given Amount</th>
+                <th>Amount</th>
                 <th>Transaction Date</th>
-                <th>Source</th>
+                <th>Actions</th>
+                <!-- <th>Source</th> -->
             </tr>
         </tfoot>
     </table>
